--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "history": "^5.1.0",
+    "intl-tel-input": "^17.0.15",
     "mini-css-extract-plugin": "^2.4.5",
     "morgan": "^1.10.0",
     "pm2": "^5.1.2",
@@ -57,6 +58,7 @@
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/history": "^4.7.9",
+    "@types/intl-tel-input": "^17.0.4",
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/morgan": "^1.9.3",
     "@types/react": "^17.0.37",
