--- a/package.json
+++ b/package.json
@@ -34,17 +34,18 @@
     "intl-tel-input": "^17.0.15",
     "mini-css-extract-plugin": "^2.4.5",
     "morgan": "^1.10.0",
+    "normalize.css": "^8.0.1",
     "pm2": "^5.1.2",
     "postcss": "^8.4.4",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
+    "postcss-nested": "^5.0.6",
     "react": "^18.0.0-rc.0-next-f2a59df48-20211208",
     "react-dom": "^18.0.0-rc.0-next-f2a59df48-20211208",
     "regenerator-runtime": "^0.13.9",
     "serialize-javascript": "^6.0.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^2.2.19",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
