--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^6.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "graphql": "^16.1.0",
     "history": "^5.1.0",
     "intl-tel-input": "^17.0.15",
     "mini-css-extract-plugin": "^2.4.5",
@@ -48,6 +49,7 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
+    "urql": "^2.0.6",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
   },
