--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "autoprefixer": "^10.4.0",
     "body-parser": "^1.19.0",
+    "cookie-session": "^2.0.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.4",
     "css-loader": "^6.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -58,6 +60,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-session": "^2.0.43",
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/history": "^4.7.9",
