--- a/src/galoy-client/package.json
+++ b/src/galoy-client/package.json
@@ -7,5 +7,9 @@
   "dependencies": {
     "bitcoinjs-lib": "^6.0.1",
     "bolt11": "^1.3.4"
+  },
+  "resolutions": {
+    "bech32": "^1.1.2"
   }
+
 }
