--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "prod:stop": "pm2 stop web-walletProd",
     "test:verify": "jest --coverage",
     "test": "cross-env-file -p .env.local jest",
-    "tsc:check": "tsc --pretty --noEmit --skipLibCheck",
-    "dev:codegen": "graphql-codegen --config codegen.yml"
+    "tsc:check": "tsc --pretty --noEmit --skipLibCheck"
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@galoymoney/client": "^0.0.8",
     "autoprefixer": "^10.4.0",
     "body-parser": "^1.19.1",
     "cookie-session": "^2.0.0",
@@ -66,10 +66,6 @@
     "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^3.1.0",
-    "@graphql-codegen/cli": "2.3.0",
-    "@graphql-codegen/typescript": "2.4.1",
-    "@graphql-codegen/typescript-operations": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
