chore: fix dependencies for prod

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "preserveSymlinks": true,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.spec.*"]
 }
