--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build:all": "yarn install && yarn run build:node && yarn run build:files && yarn run build:webpack",
     "build:files": "copyfiles -u 1 -e \"src/**/*.ts\" -e \"src/**/*.tsx\" -e \"src/**/*.js\" \"src/**/*\" build/",
     "build:node": "rm -rf build && tsc --sourceMap false --skipLibCheck true",
-    "build:webpack": "cross-env-file webpack --mode=production --env=prod",
+    "build:webpack": "webpack --mode=production --env=prod",
     "code:check": "yarn tsc:check && yarn eslint:check && yarn prettier:check",
     "dev:bundler": "cross-env-file webpack -w --mode=development --env=dev",
     "dev:server": "cross-env-file tsnd --files --respawn src/server/server.ts --ignore-watch node_modules,public",
@@ -16,7 +16,7 @@
     "prettier:fix": "prettier --write .",
     "prod:logs": "pm2 logs --update-env web-walletProd",
     "prod:reload": "pm2 reload --update-env web-walletProd && yarn run prod:logs",
-    "prod:start": "cross-env-file pm2 start -i max build/server/server.js --exp-backoff-restart-delay=150 --update-env --name web-walletProd",
+    "prod:start": "pm2 start -i max build/server/server.js --exp-backoff-restart-delay=150 --update-env --name web-walletProd",
     "prod:stop": "pm2 stop web-walletProd",
     "test:verify": "jest --coverage",
     "test": "cross-env-file -p .env.local jest",
@@ -25,8 +25,23 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@galoymoney/client": "^0.0.8",
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-session": "^2.0.44",
+    "@types/ejs": "^3.1.0",
+    "@types/express": "^4.17.13",
+    "@types/history": "^5.0.0",
+    "@types/i18n-js": "^3.8.2",
+    "@types/intl-tel-input": "^17.0.4",
+    "@types/mini-css-extract-plugin": "^2.5.1",
+    "@types/morgan": "^1.9.3",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/serialize-javascript": "^5.0.2",
+    "@types/testing-library__jest-dom": "^5.14.2",
+    "@types/testing-library__user-event": "^4.2.0",
     "autoprefixer": "^10.4.2",
     "body-parser": "^1.19.1",
+    "buffer": "^6.0.3",
     "cookie-session": "^2.0.0",
     "copy-to-clipboard": "^3.3.1",
     "copyfiles": "^2.4.1",
@@ -69,20 +84,6 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/body-parser": "^1.19.2",
-    "@types/cookie-session": "^2.0.44",
-    "@types/ejs": "^3.1.0",
-    "@types/express": "^4.17.13",
-    "@types/history": "^5.0.0",
-    "@types/i18n-js": "^3.8.2",
-    "@types/intl-tel-input": "^17.0.4",
-    "@types/mini-css-extract-plugin": "^2.5.1",
-    "@types/morgan": "^1.9.3",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/serialize-javascript": "^5.0.2",
-    "@types/testing-library__jest-dom": "^5.14.2",
-    "@types/testing-library__user-event": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-jest": "^27.4.6",
