--- a/ci/pipeline.yaml
+++ b/ci/pipeline.yaml
@@ -19,8 +19,10 @@ source:
 groups:
   - name: web-wallet
     jobs:
+      - check-code
       - build-edge-image
       - bump-image-in-chart
+      - install-deps
 
 jobs:
   - name: build-edge-image
@@ -108,6 +110,46 @@ jobs:
           run:
             path: pipeline-tasks/ci/tasks/open-charts-pr.sh
 
+  - name: check-code
+    serial: true
+    plan:
+      - in_parallel:
+          - { get: repo, trigger: true }
+          - { get: pipeline-tasks }
+          - { get: bundled-deps, trigger: true }
+      - task: check-code
+        config:
+          platform: linux
+          image_resource: #@ task_image_config()
+          inputs:
+            - name: bundled-deps
+            - name: pipeline-tasks
+            - name: repo
+          run:
+            path: pipeline-tasks/ci/tasks/check-code.sh
+
+  - name: install-deps
+    plan:
+      - in_parallel:
+          - { get: deps, trigger: true }
+          - { get: pipeline-tasks }
+          - { put: deps-version, params: { bump: patch } }
+      - task: install-deps
+        config:
+          platform: linux
+          image_resource: #@ task_image_config()
+          inputs:
+            - name: pipeline-tasks
+            - name: deps
+            - name: deps-version
+          outputs:
+            - name: bundled-deps
+          run:
+            path: pipeline-tasks/ci/tasks/install-deps.sh
+      - put: bundled-deps
+        params:
+          file: bundled-deps/bundled-deps-*.tgz
+
 resources:
   - name: repo
     type: git
@@ -146,3 +188,33 @@ resources:
       uri: #@ data.values.git_uri
       branch: #@ data.values.git_branch
       private_key: #@ data.values.github_private_key
+
+  - name: deps
+    type: git
+    source:
+      paths: [yarn.lock]
+      uri: #@ data.values.git_uri
+      branch: #@ data.values.git_branch
+      private_key: #@ data.values.github_private_key
+
+  - name: deps-version
+    type: semver
+    source:
+      initial_version: 0.1.0
+      driver: gcs
+      bucket: #@ data.values.artifacts_bucket_name
+      key: web-wallet-artifacts/versions/deps
+      json_key: #@ data.values.staging_inception_creds
+
+  - name: bundled-deps
+    type: gcs-resource
+    source:
+      bucket: #@ data.values.artifacts_bucket_name
+      json_key: #@ data.values.staging_inception_creds
+      regexp: web-wallet-artifacts/deps/bundled-deps-v(.*)-.*.tgz
+
+resource_types:
+  - name: gcs-resource
+    type: docker-image
+    source:
+      repository: frodenas/gcs-resource
