--- a/ci/values.yaml
+++ b/ci/values.yaml
@@ -12,3 +12,7 @@ docker_registry_user: ((docker-creds.username))
 docker_registry_password: ((docker-creds.password))
 artifacts_bucket_name: ((staging-gcp-creds.bucket_name))
 staging_inception_creds: ((staging-gcp-creds.creds_json))
+
+slack_channel: web-wallet-github
+slack_username: concourse
+slack_webhook_url: ((addons-slack.api_url))
