--- a/.env.local
+++ b/.env.local
@@ -11,5 +11,7 @@
 
   "SESSION_KEYS": "sessionkeys",
 
-  "AUTH_ENDPOINT": "http://localhost:3000/api/login"
+  "AUTH_ENDPOINT": "http://localhost:3000/api/login",
+  "AUTH_BASE_URL": "http://localhost:3000/api",
+  "KRATOS_ENDPOINT": "http://localhost:4433/"
 }
