--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@galoymoney/client": "^0.0.19",
     "@galoymoney/react": "^0.0.15",
     "@testing-library/jest-dom": "^5.16.2",
+    "@ory/client": "^0.0.1-alpha.49",
+    "@ory/kratos-client": "^0.8.2-alpha.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/body-parser": "^1.19.2",
