--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "dependencies": {
     "@galoymoney/client": "^0.0.21",
     "@galoymoney/react": "^0.0.15",
-    "@ory/client": "^0.0.1-alpha.49",
+    "@ory/integrations": "^0.2.2",
     "@ory/kratos-client": "^0.8.2-alpha.1",
+    "@ory/themes": "^0.0.101",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -40,6 +41,7 @@
     "@types/testing-library__jest-dom": "^5.14.2",
     "@types/testing-library__user-event": "^4.2.0",
     "autoprefixer": "^10.4.2",
+    "axios": "^0.25.0",
     "body-parser": "^1.19.1",
     "buffer": "^6.0.3",
     "cookie-session": "^2.0.0",
