--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@galoymoney/client": "^0.1.3",
     "@galoymoney/react": "^0.1.4",
     "@ory/client": "^0.0.1-alpha.91",
+    "@ory/integrations": "^0.2.2",
     "@ory/kratos-client": "^0.8.2-alpha.1",
+    "@ory/themes": "^0.0.101",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -36,6 +38,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/serialize-javascript": "^5.0.2",
     "autoprefixer": "^10.4.2",
+    "axios": "^0.25.0",
     "body-parser": "^1.19.2",
     "buffer": "^6.0.3",
     "cookie-session": "^2.0.0",
