feat: introduce a wallet theme/layout settings

--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,8 @@
   "PORT": "3000",
 
   "WALLET_NAME": "Galoy",
+  "WALLET_LAYOUT": "default",
+  "WALLET_THEME": "default",
   "SUPPORT_EMAIL": "support@galoy.io",
   "SHARE_URI": "https://pay.mainnet.galoy.io/",
 
