--- a/dev/kratos.yml
+++ b/dev/kratos.yml
@@ -44,15 +44,15 @@ selfservice:
 
     logout:
       after:
-        default_browser_return_url: http://localhost:4455/login
+        default_browser_return_url: http://localhost:3000/
 
     login:
-      ui_url: http://localhost:4455/login
+      ui_url: http://localhost:3000/login
       lifespan: 10m
 
     registration:
       lifespan: 10m
-      ui_url: http://localhost:3000/register/email
+      ui_url: http://localhost:3000/register
       after:
         password:
           hooks:
