--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cookie-session": "^2.0.44",
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/morgan": "^1.9.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -50,6 +51,7 @@
     "css-loader": "^6.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
     "graphql": "^16.2.0",
     "helmet": "^5.0.1",
     "history": "^5.2.0",
