--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^6.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -55,6 +56,7 @@
     "graphql": "^16.2.0",
     "helmet": "^5.0.1",
     "history": "^5.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^2.5.2",
     "morgan": "^1.10.0",
     "normalize.css": "^8.0.1",
