--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,11 +60,16 @@ services:
 
   web-wallet:
     # https://github.com/GaloyMoney/charts/blob/main/charts/web-wallet/values.yaml
-    image: us.gcr.io/galoy-org/web-wallet@sha256:f9e1269a2b063a40706c8e9407e1834d19ac5300912a645d88e157552b98694c
+    image: us.gcr.io/galoy-org/web-wallet # @sha256:f9e1269a2b063a40706c8e9407e1834d19ac5300912a645d88e157552b98694c
     env_file:
       - .env
     ports:
-    - "4032:4032"
+      - "4030:4030"
+#    depends_on:
+#      - postgres
+#      - kratos
+#      - kratos-migrate
+#      - mailslurper
 
 networks:
   intranet:
