chore: docs cleanup

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build:all": "yarn install && yarn run build:node && yarn run build:files && yarn run build:webpack",
+    "build:all": "yarn install && yarn build:node && yarn build:files && yarn build:bundler",
+    "build:bundler": "webpack --mode=production --env=prod",
     "build:files": "copyfiles -u 1 -e \"src/**/*.ts\" -e \"src/**/*.tsx\" -e \"src/**/*.js\" \"src/**/*\" build/",
     "build:node": "rm -rf build && tsc --sourceMap false --skipLibCheck true",
-    "build:webpack": "webpack --mode=production --env=prod",
     "code:check": "yarn tsc:check && yarn eslint:check && yarn prettier:check",
     "dev:bundler": ". ./.envrc && webpack -w --mode=development --env=dev",
-    "dev:server": ". ./.envrc && tsnd --files --respawn src/server/server.ts --ignore-watch node_modules,public",
     "dev:docker": "docker-compose --env-file /dev/null up",
+    "dev:server": ". ./.envrc && tsnd --files --respawn src/server/server.ts --ignore-watch node_modules,public",
     "eslint:check": "eslint . --ext ts --ext tsx",
     "eslint:fix": "eslint . --ext ts --ext tsx --fix",
     "prettier:check": "prettier --check .",
