--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-wallet",
   "version": "0.0.1",
   "private": true,
+  "main": "src/index.tsx",
   "scripts": {
     "build:all": "yarn install && yarn build:node && yarn build:files && yarn build:bundler",
     "build:bundler": "webpack --mode=production --env=prod",
