--- a/.envrc.selfhosted
+++ b/.envrc.selfhosted
@@ -1,9 +1,8 @@
 #!/bin/bash
 
 DOCKER_HOST_IP=$(ip addr show docker0 | awk '/inet/ {print $2}' | cut -d'/' -f1)
-#export DOCKER_HOST_IP=${DOCKER_HOST_IP:-127.0.0.1}
 
-export NODE_PATH="src/layouts/default:src/"
+export NODE_PATH="build/layouts/default:build/"
 export NODE_ENV="production"
 export SESSION_KEYS="sessionkeys"
 export HOST="0.0.0.0"
@@ -19,7 +18,7 @@ export NETWORK="testnet"
 
 export GRAPHQL_URI="http://${DOCKER_HOST_IP}:4002/graphql"
 export GRAPHQL_SUBSCRIPTION_URI="ws://${DOCKER_HOST_IP}:4002/graphql"
-export AUTH_ENDPOINT="http://localhost:3000/api/login"
+export AUTH_ENDPOINT="http://${DOCKER_HOST_IP}:4030/api/login"
 
 
 export KRATOS_API_URL="http://${DOCKER_HOST_IP}:4433"
@@ -27,4 +26,4 @@ export KRATOS_BROWSER_URL="http://${DOCKER_HOST_IP}:4433"
 
 export GALOY_AUTH_ENDPOINT="http://${DOCKER_HOST_IP}:4002/auth/browser"
 
-export KRATOS_FEATURE_FLAG="true"
+export KRATOS_FEATURE_FLAG="false"
