--- a/.envrc
+++ b/.envrc
@@ -8,11 +8,11 @@ export WALLET_NAME="Galoy"
 export WALLET_LAYOUT="default"
 export WALLET_THEME="default"
 export SUPPORT_EMAIL="support@galoy.io"
-export SHARE_URI="https://pay.mainnet.galoy.io/"
+export SHARE_URL="https://pay.mainnet.galoy.io/"
 
 export NETWORK="regtest"
-export GRAPHQL_URI="http://localhost:4002/graphql"
-export GRAPHQL_SUBSCRIPTION_URI="ws://localhost:4002/graphql"
+export GRAPHQL_URL="http://localhost:4002/graphql"
+export GRAPHQL_SUBSCRIPTION_URL="ws://localhost:4002/graphql"
 export AUTH_ENDPOINT="http://localhost:3000/api/login"
 export KRATOS_API_URL="http://localhost:4433"
 export KRATOS_BROWSER_URL="http://localhost:4433"
