refactor: rename layouts -> modules

--- a/.envrc
+++ b/.envrc
@@ -1,11 +1,11 @@
-export NODE_PATH="src/layouts/default:src/"
+export NODE_PATH="src/modules/default:src/"
 export NODE_ENV="development"
 export SESSION_KEYS="sessionkeys"
 export HOST="localhost"
 export PORT="3000"
 
 export WALLET_NAME="Galoy"
-export WALLET_LAYOUT="default"
+export CUSTOM_MODULES="default"
 export WALLET_THEME="default"
 export SUPPORT_EMAIL="support@galoy.io"
 export SHARE_URL="https://pay.mainnet.galoy.io/"
