chore: add missing dependencies

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tsc:check": "tsc --pretty --noEmit --skipLibCheck"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.6",
     "@galoymoney/client": "^0.1.25",
     "@galoymoney/react": "^0.1.11",
     "@opentelemetry/api": "^1.1.0",
@@ -52,13 +53,15 @@
     "@types/supertest": "^2.0.12",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "bitcoinjs-lib": "^6.0.1",
     "body-parser": "^1.20.0",
+    "bolt11": "^1.4.0",
     "buffer": "^6.0.3",
     "cookie-session": "^2.0.0",
     "copy-to-clipboard": "^3.3.1",
     "copyfiles": "^2.4.1",
     "cross-env-file": "^1.0.0",
-    "cross-fetch": "^3.1.4",
+    "cross-fetch": "^3.1.5",
     "css-loader": "^6.7.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -66,6 +69,7 @@
     "graphql": "^16.5.0",
     "helmet": "^5.1.0",
     "history": "^5.2.0",
+    "i18n-js": "^3.9.2",
     "jest-environment-jsdom": "^28.1.1",
     "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^2.6.0",
