feat: added a POL page

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "copyfiles": "^2.4.1",
     "cross-env-file": "^1.0.0",
     "cross-fetch": "^3.1.5",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -80,6 +81,7 @@
     "postcss-loader": "^7.0.0",
     "postcss-mixins": "^9.0.1",
     "postcss-nested": "^5.0.6",
+    "proof-of-liabilities": "../proof-of-liabilities/",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-error-boundary": "^3.1.4",
