--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/core": "^1.2.0",
     "@opentelemetry/exporter-jaeger": "^1.2.0",
+    "@opentelemetry/exporter-zipkin": "^1.4.0",
     "@opentelemetry/instrumentation": "^0.28.0",
+    "@opentelemetry/instrumentation-fetch": "^0.30.0",
     "@opentelemetry/instrumentation-http": "^0.28.0",
     "@opentelemetry/resources": "^1.2.0",
     "@opentelemetry/sdk-trace-base": "^1.2.0",
