--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
     "graphql": "^16.5.0",
+    "graphql-ws": "^5.9.1",
     "helmet": "^5.1.1",
     "history": "^5.2.0",
     "i18n-js": "^3.9.2",
@@ -91,7 +92,6 @@
     "source-map-loader": "^4.0.0",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
-    "subscriptions-transport-ws": "^0.11.0",
     "supertest": "^6.2.4",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
