--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@opentelemetry/resources": "^1.5.0",
     "@opentelemetry/sdk-trace-base": "^1.5.0",
     "@opentelemetry/sdk-trace-node": "^1.5.0",
+    "@opentelemetry/sdk-trace-web": "^1.7.0",
     "@opentelemetry/semantic-conventions": "^1.5.0",
     "@opentelemetry/tracing": "^0.24.0",
-    "@opentelemetry/web": "^0.24.0",
     "@ory/client": "^0.2.0-alpha.4",
     "@ory/integrations": "^0.2.6",
     "@ory/kratos-client": "^0.10.1",
