--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
-    "@galoymoney/client": "^0.1.62",
+    "@galoymoney/client": "^0.1.68",
     "@galoymoney/react": "^0.1.14",
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/core": "^1.5.0",
@@ -68,6 +68,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.5.1",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.11.2",
     "helmet": "^5.1.1",
     "history": "^5.2.0",
     "i18n-js": "3.9.2",
