chore: import graphql code as-is from client

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:node": "rm -rf build && tsc --sourceMap false --skipLibCheck true",
     "code:check": "yarn tsc:check && yarn eslint:check && yarn prettier:check",
     "dev:bundler": ". ./.envrc && webpack -w --mode=development --env=dev",
+    "dev:codegen": "graphql-codegen --config codegen.yml",
     "dev:server": ". ./.envrc && tsnd --files --respawn src/server/server.ts --ignore-watch node_modules,public",
     "eslint:check": "eslint . --ext ts --ext tsx",
     "eslint:fix": "eslint . --ext ts --ext tsx --fix",
@@ -27,6 +28,10 @@
     "@apollo/client": "^3.7.4",
     "@galoymoney/client": "0.1.77",
     "@galoymoney/react": "^0.1.14",
+    "@graphql-codegen/add": "^3.2.3",
+    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/typescript": "^2.8.7",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
     "@opentelemetry/api": "^1.4.0",
     "@opentelemetry/core": "^1.9.0",
     "@opentelemetry/exporter-jaeger": "^1.9.0",
