--- a/.envrc
+++ b/.envrc
@@ -10,11 +10,12 @@ export WALLET_NAME="Galoy"
 export SUPPORT_EMAIL="support@galoy.io"
 export SHARE_URL="https://pay.mainnet.galoy.io/"
 
-export NETWORK="signet"
-export GRAPHQL_URL="https://api.staging.galoy.io/graphql"
-export GRAPHQL_SUBSCRIPTION_URL="wss://api.staging.galoy.io/graphql"
-export AUTH_ENDPOINT="https://api.staging.galoy.io/api/login"
+export NETWORK="regtest"
+export GRAPHQL_URL="http://localhost:4002/graphql"
+export GRAPHQL_SUBSCRIPTION_URL="ws://localhost:4002/graphql"
+export AUTH_ENDPOINT="http://localhost:3000/api/login"
 export KRATOS_API_URL="http://localhost:4433"
 export KRATOS_BROWSER_URL="http://localhost:4433"
-export GALOY_AUTH_ENDPOINT="https://api.staging.galoy.io/auth"
+export GALOY_AUTH_ENDPOINT="http://localhost:4002/auth"
+
 export KRATOS_FEATURE_FLAG="false"
