--- a/ci/pipeline.yaml
+++ b/ci/pipeline.yaml
@@ -288,6 +288,7 @@ jobs:
 resources:
   - name: repo
     type: git
+    webhook_token: ((webhook.secret))
     source:
       ignore_paths: ["ci/*[^md]"]
       uri: #@ data.values.git_uri
@@ -365,6 +366,7 @@ resources:
 
   - name: deps
     type: git
+    webhook_token: ((webhook.secret))
     source:
       paths: [yarn.lock]
       uri: #@ data.values.git_uri
