--- a/.envrc
+++ b/.envrc
@@ -12,7 +12,7 @@ export SHARE_URL="https://pay.mainnet.galoy.io/"
 
 export NETWORK="regtest"
 export GRAPHQL_URL="http://localhost:4002/graphql"
-export GRAPHQL_SUBSCRIPTION_URL="ws://localhost:4002/graphql"
+export GRAPHQL_SUBSCRIPTION_URL="ws://localhost:4002/graphqlws"
 export AUTH_ENDPOINT="http://localhost:3000/api/login"
 export KRATOS_API_URL="http://localhost:4433"
 export KRATOS_BROWSER_URL="http://localhost:4433"
