--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.5.1",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.14.0",
     "helmet": "^5.1.1",
     "history": "^5.2.0",
     "i18n-js": "3.9.2",
