feat: add email login

--- a/codegen.yml
+++ b/codegen.yml
@@ -25,12 +25,14 @@ generates:
         AuthToken: "string"
         CentAmount: "number"
         ContactAlias: "string"
+        Feedback: "string"
         Hex32Bytes: "string"
         Language: "string"
         LnPaymentPreImage: "string"
         LnPaymentRequest: "string"
         LnPaymentSecret: "string"
         Memo: "string"
+        Minutes: "number"
         OnChainAddress: "string"
         OnChainTxHash: "string"
         OneTimeAuthCode: "string"
@@ -46,3 +48,10 @@ generates:
         Seconds: "number"
         DisplayCurrency: "string"
         SignedDisplayMajorAmount: "string"
+        CountryCode: "string"
+        Email: "string"
+        EmailRegistrationId: "string"
+        TotpRegistrationId: "string"
+        EmailAddress: "string"
+        TotpSecret: "string"
+        TotpCode: "string"
